--- a/modules/home/hypr/assets/waybar.css
+++ b/modules/home/hypr/assets/waybar.css
@@ -108,15 +108,15 @@ window#waybar {
   animation-direction: alternate;
 }
 
-#cpu & #custom-info.cpu {
+#cpu, #custom-info.cpu {
   background-color: #5f3606;
 }
 
-#memory & #custom-info.mem {
+#memory, #custom-info.mem {
   background-color: #065711;
 }
 
-#network #custom-info.net {
+#network, #custom-info.net {
   background-color: #063657;
 }
 
@@ -124,7 +124,7 @@ window#waybar {
   background: #f53c3c;
 }
 
-#pulseaudio & #custom-info.vol {
+#pulseaudio, #custom-info.vol {
   background-color: #4f0552;
 }
 
