--- a/modules/home/hypr/assets/waybar.css
+++ b/modules/home/hypr/assets/waybar.css
@@ -85,7 +85,7 @@ window#waybar {
   color: lime;
 }
 
-#custom-info.bat, #custom-info.batwarning {
+#custom-info.bat, #custom-info.batwarning, #custom-info.err {
   background-color: #f53c3c;
 }
 
@@ -128,12 +128,14 @@ window#waybar {
   background-color: #4f0552;
 }
 
-#pulseaudio.muted {
-}
-
 #mpris {
   color: rgb(102, 220, 105);
 }
 
-#tray {
+#custom-info {
+  transition-property: background;
+  transition-duration: 0.5s;
+}
+#custom-info.ntf {
+  color: #407eff;
 }
